# RngKitCLI

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  auto_start_instr.txt  install_python_libs.bat  main.py  pyproject.toml  requirements.txt  rng_boot.py
1-SavedFiles/: 20221126-192541_trng_s256_i1.csv
src/rngkit_cli/: __init__.py  analyzer.py  collector.py
src/rngkit_cli/devices/: __init__.py  bitbabbler.py  pseudo.py  truerng.py
src/rngkit_cli/services/: __init__.py  filenames.py  storage.py
src/rngkit_cli/utils/: __init__.py  common.py  devices.py
tests/: setup.py  test1.py  test_cli.py
